# ff-files/internal/service/minio/helpers/create-response.go
@@ -1,6 +1,0 @@
-package helpers
-
-type CreatedObject struct {
-	ObjectID string `json:"object_id"`
-	Link     string `json:"link"`
-}
